# bewaardvoorjou

./: .backenv.txt  .gitignore  .railwayignore  AI_ASSISTANT_ENHANCEMENTS.md  BEWAARD_VOOR_BABY_SEO_PLAN.md  Bewaard voor jou 2.docx  Bewaardvoorjou_Masterplan_2.0.md  Box.docx  CLAUDE.md  DEPLOYMENT.md  DESIGN_SYSTEM.md  FINAL_SUMMARY.md  GEDACHTE_INSPREKEN_PLAN.md  LIVEGANG.md  Life Journey App 2.1.docx  PERFORMANCE_PLAN.md  PROGRESS.md  RAILWAY_SETUP.md  README.md  SECURITY_IMPROVEMENTS.md  SEO_ACTIEPLAN.md  VERCEL_DEPLOYMENT.md  check_email.sql  debug_email.py  mock-backend.js  nixpacks.toml  package.json  railway.toml  update_admin.sql  usb_setup.py  verify_draft.mjs  ~$fe Journey App 2.1.docx
life-journey-backend/: .env.example  .gitignore  .vercelignore  =0.1.9  =0.7.0  =1.54.0  Makefile  Procfile  Totaal Punten Ooit.txt  WORLD_CLASS_INTERVIEWER.md  alembic.ini  check_order.py  diagnose_email.py  fix_s3_cors.py  fix_text_object_keys.py  index.py  migrate_chapters.py  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  seed_blog_articles.py  seed_kennisbank.py  send_buyer_confirmation_once.py  start.sh  test.db  test_after_change.py  test_email_send.py  test_email_trigger.py  test_interviewer.py  test_to_owner.py  update_kennisbank.py  vercel.json
life-journey-backend/.railway/: config.json
life-journey-backend/admin/: update-kennisbank-hoe-begin-ik.sql
life-journey-backend/alembic/: env.py
life-journey-backend/api/: index.py
life-journey-backend/app/: __init__.py  main.py
life-journey-backend/scripts/: HOWTO_cleanup_blog.md  README.md  backfill_kb_internal_links.py  backfill_text_dedup.py  backfill_text_from_r2.py  backfill_text_ready.py  cleanup_blog_production_issues.py  create_admin.py  diagnose_bleije.py  discover_kb_link_gaps.py  generate_covers.py  seed_kennisbank.py  seed_wereldklasse_content.py  test_all_emails.py  test_transcription.py  update_kennisbank.py
life-journey-backend/tests/: conftest.py  run_kb_tests.py  test_auth_service.py  test_email_engagement.py  test_email_guards.py  test_email_scheduling.py  (+13 more)
(+628 files in other folders)
