[project]
name = "life-journey-backend"
version = "0.1.0"
description = "FastAPI backend voor Life Journey"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.4",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.31",
  "pydantic-settings>=2.3.4",
  "pydantic[email]>=2.9.0",
  "python-multipart>=0.0.9",
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "redis>=5.1.0",
  "celery>=5.4.0",
  "loguru>=0.7.2",
  "mangum>=0.17.0",
  "argon2-cffi>=23.1.0",
  "pyjwt[crypto]>=2.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "httpx[http2]>=0.27.0",
  "ruff>=0.6.5",
  "mypy>=1.11.0"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
